--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI="mongodb://localhost:27017/dsa_sheet"
+MONGODB_URI="mongodb+srv://budhurushirisha1_db_user:newpassword@cluster0.kca9vf7.mongodb.net/dsaweb?retryWrites=true&w=majority"
 JWT_SECRET=supersecretjwt
 PORT=5000
 CLIENT_URL=http://localhost:5173
